crates/kaban-parser/tests/snapshots/statements__private_struct_decl_with_multiple_generics_and_interface_constraints.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: struct Point<T: impl Serializable, U: impl Debug,> {pub x: T, pub y: U,}

Block [
    StructDeclWithGeneric {
        is_pub: false,
        name: Identifier("Point"),
        generic_params: [
            GenericParam {
                name: Identifier("T"),
                constraint: InterfaceConstraint(
                    Identifier("Serializable"),
                ),
            },
            GenericParam {
                name: Identifier("U"),
                constraint: InterfaceConstraint(
                    Identifier("Debug"),
                ),
            },
        ],
        field_decls: [
            StructFieldDecleration {
                is_pub: true,
                field_name: Identifier("x"),
                type: NamedType(
                    Identifier("T"),
                ),
            },
            StructFieldDecleration {
                is_pub: true,
                field_name: Identifier("y"),
                type: NamedType(
                    Identifier("U"),
                ),
            },
        ],
    },
]
