crates/kaban-parser/tests/snapshots/statements__private_struct_decl_with_no_generics.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: struct Point {x: i32, y: i32}

Block [
    StructDeclWithNoGeneric {
        is_pub: false,
        name: Identifier("Point"),
        field_decls: [
            StructFieldDecleration {
                is_pub: false,
                field_name: Identifier("x"),
                type: Type(I32),
            },
            StructFieldDecleration {
                is_pub: false,
                field_name: Identifier("y"),
                type: Type(I32),
            },
        ],
    },
]
